# Sugar-FlaskWork

./: .env.example  .gitignore  README.md  app  app.bat  app.py  app_factory.py  extensions.py  package-lock.json  package.json  pyproject.toml  requirements copy.txt  requirements.txt  runner.py  system.toml  tailwind.config.js
command/: ._commands.py  .gitignore  commands.py  dependencies.yml
command/template/: Component.txt  Controller.txt  Model.txt  modelsINIT.txt  subTemplate.txt
controller/: __init__.py  homeController.py
models/: __init__.py  admin.py  models.py
route/: web.py
routes/: web.py
static/src/: input.css
templates/: home.html
utils/imports/: __init__.py  aliases.py  crypto_imports.py  db_imports.py  flask_imports.py  system_imports.py
utils/scripts/: commands.py  setup.py
utils/scripts/template/: Controller.txt  Template.txt
